syntax = "proto3";

option csharp_namespace = "Discounts";

package discounts;

service DiscountProvider {
  rpc Generate (GenerateRequest) returns (GenerateReply);
  rpc UseCode (UseCodeRequest) returns (UseCodeReply);
  rpc RandomCode (RandomCodeRequest) returns (RandomCodeReply);
}

message GenerateRequest {
  uint32 count = 1;
  uint32 length = 2;
}

message GenerateReply {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeReply {
  UseCodeResult result = 1;
}

enum UseCodeResult {
  Unknown = 0;
  Redeemed = 1;
  NotFound = 2;
  AlreadyRedeemed = 3;
}

message RandomCodeRequest {}

message RandomCodeReply {
  optional string code = 1;
}
